cjal-25/09/2018. avance modulos punto de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -507,6 +507,7 @@
                             <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                             <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                             <li>@Html.ActionLink("Precio de venta", "Index", "PrecioVenta")</li>
+                            <li>@Html.ActionLink("Puntos de venta", "Index", "PuntoVenta")</li>
                         </ul>
                     </li>
                 </ul>
