--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
@@ -40,8 +40,8 @@
                         <h2>Proveedores</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="javascript:void(0);">Forms</a></li>
-                            <li class="breadcrumb-item active">Catálogo / Proveedores</li>
+                            <li class="breadcrumb-item active"> Catálogo </li>
+                            <li class="breadcrumb-item active"> Proveedor </li>
                         </ul>
                     </div>
                 </div>
