--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
@@ -48,7 +48,7 @@
                         </div>
                         <br />
                      
-                                @*<div class="row clearfix">*@
+                  
                                     <div class="row clearfix">
                                         <div class="col-md-12">
                                             <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-primary float-right" />
@@ -103,7 +103,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                @*</div>*@
+                        
 
                                 <div class="card">
                                     <div class="body">
@@ -170,11 +170,38 @@
                                 </div>
                             </div>
                         </div>
+                @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                {
+
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                        <a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
+
+                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                {
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
                     </div>
         </div>
     </section>
 
 }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 @*<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
     <script src="~/assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
     <script src="~/assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
