--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -8,6 +8,7 @@
 <!-- Bootstrap Select Css -->
 <link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
+<link href="~/assets/css/main.css" rel="stylesheet" />
 
 <!-- Page Loader -->
 <div class="page-loader-wrapper">
@@ -71,36 +72,36 @@
                                             @foreach (var item in @ViewBag.listaEmpresas)
                                             {
 
-                                                <tr>
-                                                    @if (@item.UrlLogotipo180px != null)
+                                            <tr>
+                                                @if (@item.UrlLogotipo180px != null)
                                                     {
-                                                        <td><img id="@item.UrlLogotipo180px" src="@Url.Content(@item.UrlLogotipo180px)" style="width:30px;height:30px" /></td>
+                                                    <td><img id="@item.UrlLogotipo180px" src="@Url.Content(@item.UrlLogotipo180px)" style="width:30px;height:30px" /></td>
                                                     }
                                                     else
                                                     {
-                                                        <td>@item.UrlLogotipo180px</td>
+                                                    <td>@item.UrlLogotipo180px</td>
                                                     }
-                                                    <td>@item.RazonSocial</td>
-                                                    <td>@item.Rfc</td>
-                                                    <td>@item.Persona1</td>
-                                                    <td>@item.Celular1</td>
-                                                    <td>@item.Telefono1</td>
-                                                    <td>@item.Email1</td>
-                                                    <td>
-                                                        <a ID="lblCrear" href="@Url.Action("EditarEmpresa", "Empresas", new { id = item.IdEmpresa })">
-                                                            <i class="material-icons">edit</i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
-                                                        <a ID="lbEdit" href="@Url.Action("ActualizaParametros", "Empresas", new { id = item.IdEmpresa })">
-                                                            <i class="zmdi zmdi-settings"></i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
-                                                        <a ID="lbBorrar" href="@Url.Action("BorrarEmpresa", "Empresas", new { id = item.IdEmpresa })">
-                                                            <i class="material-icons">delete</i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
-                                                    </td>
-                                                </tr>
+                                                <td>@item.RazonSocial</td>
+                                                <td>@item.Rfc</td>
+                                                <td>@item.Persona1</td>
+                                                <td>@item.Celular1</td>
+                                                <td>@item.Telefono1</td>
+                                                <td>@item.Email1</td>
+                                                <td>
+                                                    <a ID="lblCrear" href="@Url.Action("EditarEmpresa", "Empresas", new { id = item.IdEmpresa })">
+                                                        <i class="material-icons">edit</i>
+                                                        <span class="icon-name"></span>
+                                                    </a>
+                                                    <a ID="lbEdit" href="@Url.Action("ActualizaParametros", "Empresas", new { id = item.IdEmpresa })">
+                                                        <i class="zmdi zmdi-settings"></i>
+                                                        <span class="icon-name"></span>
+                                                    </a>
+                                                    <a ID="lbBorrar" href="@Url.Action("BorrarEmpresa", "Empresas", new { id = item.IdEmpresa })">
+                                                        <i class="material-icons">delete</i>
+                                                        <span class="icon-name"></span>
+                                                    </a>
+                                                </td>
+                                            </tr>
                                             }
                                         </tbody>
                                     </table>
@@ -109,17 +110,52 @@
                         </div>
 
                     </div>
-                </div>
+                </div>             
+                @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                {
+
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+ bottom: 20px; left: 0px; right: 0px;">
+                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                         <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                        <a href="#" target="_blank" data-notify="url"></a>
+                    </div>                   
+                }
+                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                {
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+ bottom: 20px; left: 0px; right: 0px;">
+                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                         <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
+
+
             </div>
         </div>
     </section>
 
 }
-<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+@*<script src="assets/bundles/libscripts.bundle.js"></script>
+<script src="assets/bundles/vendorscripts.bundle.js"></script>
+<script src="assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="assets/bundles/mainscripts.bundle.js"></script>
+<script src="assets/js/pages/ui/notifications.js"></script>*@
+
+@*<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
 <script src="~/assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
 <script src="~/assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
 <script src="~/assets/plugins/jquery-datatable/buttons/buttons.colVis.min.js"></script>
 <script src="~/assets/plugins/jquery-datatable/buttons/buttons.html5.min.js"></script>
 <script src="~/assets/plugins/jquery-datatable/buttons/buttons.print.min.js"></script>
-<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
+<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>*@
 
